ACLOCAL_AMFLAGS = -I m4

AM_CPPFLAGS = -I$(srcdir) -I$(srcdir)/headers -I$(srcdir)/imagewin -I$(srcdir)/shapes \
	-I$(srcdir)/server -I$(srcdir)/data -I$(srcdir)/gamemgr \
	-I$(srcdir)/objs -I$(srcdir)/conf -I$(srcdir)/files -I$(srcdir)/gumps \
	-I$(srcdir)/audio -I$(srcdir)/audio/midi_drivers -I$(srcdir)/pathfinder \
	-I$(srcdir)/usecode -I$(srcdir)/shapes/shapeinf \
	$(SDL_CFLAGS) $(VORBIS_CFLAGS) $(OGG_CFLAGS) $(INCDIRS) $(WINDOWING_SYSTEM) \
	$(DEBUG_FLAGS) $(CPPFLAGS) -DEXULT_DATADIR=\"$(EXULT_DATADIR)\"

if BUILD_MODS
MODSDIR=content
endif
if HAVE_PNG
PNG_LIBS=-lpng
endif


SUBDIRS =  files conf data shapes imagewin pathfinder \
	gamemgr flic usecode tools audio gumps objs server \
	mapedit desktop docs $(MODSDIR)

bin_PROGRAMS = exult
if SDL_MAIN_NEEDED
exult_SOURCES = sdl_main.cc
else
exult_SOURCES =
endif

exult_LDADD = libexult.la

lib_LTLIBRARIES = libexult.la

libexult_la_SOURCES =	\
	actions.cc	\
	actions.h	\
	actorio.cc	\
	actors.cc	\
	actors.h	\
	args.cc		\
	args.h		\
	headers/array_size.h	\
	browser.cc	\
	browser.h	\
	cheat.cc	\
	cheat.h		\
	cheat_screen.cc	\
	cheat_screen.h	\
	combat.cc	\
	combat.h	\
	combat_opts.h	\
	headers/common_types.h	\
	dir.cc		\
	dir.h		\
	drag.cc		\
	drag.h		\
	effects.cc	\
	effects.h	\
	headers/exceptions.h	\
	exult.cc	\
	exult.h		\
	exulticon.h	\
	exultmenu.cc	\
	exultmenu.h	\
	exult_constants.h	\
	fnames.h	\
	frameseq.h	\
	game.cc		\
	game.h		\
	gameclk.cc	\
	gameclk.h	\
	gamedat.cc	\
	gamemap.cc	\
	gamemap.h	\
	gamerend.cc	\
	gamerend.h	\
	gamewin.cc	\
	gamewin.h	\
	headers/gamma.h	\
	hash_utils.h	\
	headers/ignore_unused_variable_warning.h	\
	headers/ios_state.hpp	\
	istring.cc	\
	istring.h	\
	keys.cc		\
	keys.h		\
	keyactions.cc	\
	keyactions.h	\
	menulist.cc	\
	menulist.h	\
	monsters.cc	\
	monsters.h	\
	mouse.cc	\
	mouse.h		\
	npcnear.cc	\
	npcnear.h	\
	npctime.cc	\
	npctime.h	\
	palette.cc	\
	palette.h	\
	party.cc	\
	party.h		\
	paths.cc	\
	paths.h		\
	headers/pent_include.h	\
	readnpcs.cc	\
	rect.h		\
	schedule.cc	\
	schedule.h	\
	shapeid.cc	\
	shapeid.h	\
	singles.h	\
	touchui.cc	\
	touchui.h	\
	tiles.h		\
	tqueue.cc	\
	tqueue.h	\
	txtscroll.cc	\
	txtscroll.h	\
	verify.cc	\
	verify.h	\
	version.cc	\
	version.h

EXULTLIBS = \
	pathfinder/libpathfinder.la		\
	audio/libaudio.la	\
	audio/midi_drivers/libmididrv.la	\
	audio/midi_drivers/timidity/libtimidity.la	\
	conf/libconf.la		\
	imagewin/libimagewin.la	\
	server/libserver.la \
	gamemgr/libgamemgr.la	\
	flic/libflic.la \
	usecode/libusecode.la	\
	shapes/libshapes.la \
	shapes/shapeinf/libshapeinf.la \
	objs/libobjs.la \
	gumps/libgumps.la \
	files/libu7file.la \
	files/sha1/libsha1.la \
	files/zip/libminizip.la

libexult_la_LIBADD = \
	$(EXULTLIBS) $(PNG_LIBS) \
	$(SDL_LIBS) $(SYSLIBS) $(x_libraries) $(ICON_FILE) \
	$(ZLIB_LIBS) $(VORBIS_LIBS) $(VORBISFILE_LIBS) $(OGG_LIBS) $(MT32EMU_LIBS) $(FLUIDSYNTH_LIBS) $(ALSA_LIBS)

libexult_la_DEPENDENCIES = $(ICON_FILE) $(EXULTLIBS)

EXTRA_DIST = 	\
	autogen.sh \
	README \
	FAQ \
	README.md \
	README.win32 \
	README.MacOSX \
	Makefile.common \
	Makefile.mingw \
	Info.plist.in \
	stamp-h.in \
	windrag.cc \
	windrag.h \
	win32/exult.ico \
	win32/exultico.rc \
	win32/exultstudio.ico \
	win32/exultstudioico.rc \
	win32/exconfig.cc \
	win32/exconfig.def \
	win32/exconfig.h \
	win32/exconfig.rc \
	win32/exult.exe.manifest \
	win32/exult_installer.iss \
	win32/exult_shpplugin_installer.iss \
	win32/exult_studio.exe.manifest \
	win32/exult_studio_installer.iss \
	win32/exult_tools_installer.iss \
	win32/glib-xp.patch \
	win32/README-SDL.txt \
	macosx/exult.icns \
	macosx/exult_studio_info.plist.in \
	macosx/diskback.png \
	macosx/DS_Store \
	macosx/exult_studio.bundle \
	macosx/exult_studio_entitlements.plist \
	macosx/exult_studio.icns \
	macosx/exult_studio_launcher.sh \
	msvcstuff/vs2019/.gitignore \
	msvcstuff/vs2019/Exult.sln \
	msvcstuff/vs2019/Exult.vcxproj \
	msvcstuff/vs2019/Exult.vcxproj.filters \
	msvcstuff/vs2019/dirent.h \
	msvcstuff/vs2019/expack/expack.vcxproj \
	msvcstuff/vs2019/expack/expack.vcxproj.filters \
	msvcstuff/vs2019/msvc_include.h \
	msvcstuff/vs2019/packages.config \
	msvcstuff/vs2019/unistd.h \
	ios/Exult.xcodeproj \
	ios/Exult.xcodeproj/project.pbxproj \
	ios/GamePadView.h \
	ios/GamePadView.m \
	ios/Images/Icon.png \
	ios/Images/btn.png \
	ios/Images/btnpressed.png \
	ios/Images/dpadglass-east.png \
	ios/Images/dpadglass-north.png \
	ios/Images/dpadglass-northeast.png \
	ios/Images/dpadglass-northwest.png \
	ios/Images/dpadglass-south.png \
	ios/Images/dpadglass-southeast.png \
	ios/Images/dpadglass-southwest.png \
	ios/Images/dpadglass-west.png \
	ios/Images/dpadglass.png \
	ios/Images/joypad-glass-east.png \
	ios/Images/joypad-glass-north.png \
	ios/Images/joypad-glass-northeast.png \
	ios/Images/joypad-glass-northwest.png \
	ios/Images/joypad-glass-south.png \
	ios/Images/joypad-glass-southeast.png \
	ios/Images/joypad-glass-southwest.png \
	ios/Images/joypad-glass-west.png \
	ios/Images/joypad-glass.png \
	ios/Images/joythumb-glass.png \
	ios/Info.plist \
	ios/Media.xcassets/Contents.json \
	ios/Media.xcassets/AppIcon.appiconset/Contents.json \
	ios/Media.xcassets/AppIcon.appiconset/Icon-App-20x20@1x.png \
	ios/Media.xcassets/AppIcon.appiconset/Icon-App-20x20@2x.png \
	ios/Media.xcassets/AppIcon.appiconset/Icon-App-20x20@3x.png \
	ios/Media.xcassets/AppIcon.appiconset/Icon-App-29x29@1x.png \
	ios/Media.xcassets/AppIcon.appiconset/Icon-App-29x29@2x.png \
	ios/Media.xcassets/AppIcon.appiconset/Icon-App-29x29@3x.png \
	ios/Media.xcassets/AppIcon.appiconset/Icon-App-40x40@1x.png \
	ios/Media.xcassets/AppIcon.appiconset/Icon-App-40x40@2x.png \
	ios/Media.xcassets/AppIcon.appiconset/Icon-App-40x40@3x.png \
	ios/Media.xcassets/AppIcon.appiconset/Icon-App-57x57@1x.png \
	ios/Media.xcassets/AppIcon.appiconset/Icon-App-57x57@2x.png \
	ios/Media.xcassets/AppIcon.appiconset/Icon-App-60x60@2x.png \
	ios/Media.xcassets/AppIcon.appiconset/Icon-App-60x60@3x.png \
	ios/Media.xcassets/AppIcon.appiconset/Icon-App-72x72@1x.png \
	ios/Media.xcassets/AppIcon.appiconset/Icon-App-72x72@2x.png \
	ios/Media.xcassets/AppIcon.appiconset/Icon-App-76x76@1x.png \
	ios/Media.xcassets/AppIcon.appiconset/Icon-App-76x76@2x.png \
	ios/Media.xcassets/AppIcon.appiconset/Icon-App-83.5x83.5@2x.png \
	ios/Media.xcassets/AppIcon.appiconset/Icon-AppStore.png \
	ios/Media.xcassets/AppIcon.appiconset/Icon-Small-50x50@1x.png \
	ios/Media.xcassets/AppIcon.appiconset/Icon-Small-50x50@2x.png \
	ios/SDL2/dummy \
	ios/data/dummy \
	ios/include/config.h \
	ios/include/ios_utils.h \
	ios/ios_utils.mm \
	ios/libmt32emu/dummy \
	ios/libmt32emu.xcodeproj/project.pbxproj \
	ios/libogg/dummy \
	ios/libogg.xcodeproj/project.pbxproj \
	ios/libvorbis/dummy \
	ios/libvorbis.xcodeproj/project.pbxproj \
	mapedit/tools/mockup/LICENCE \
	mapedit/tools/mockup/Makefile \
	mapedit/tools/mockup/README \
	mapedit/tools/mockup/defs.h \
	mapedit/tools/mockup/main.h \
	mapedit/tools/mockup/map.png \
	mapedit/tools/mockup/mappings.txt \
	mapedit/tools/mockup/mappings_alternative.txt \
	mapedit/tools/mockup/main.c \
	mapedit/tools/smooth/AUTHORS \
	mapedit/tools/smooth/COPYING \
	mapedit/tools/smooth/ChangeLog \
	mapedit/tools/smooth/INSTALL \
	mapedit/tools/smooth/README \
	mapedit/tools/smooth/config.h \
	mapedit/tools/smooth/globals.h \
	mapedit/tools/smooth/image.h \
	mapedit/tools/smooth/linked.h \
	mapedit/tools/smooth/param.h \
	mapedit/tools/smooth/plugin.h \
	mapedit/tools/smooth/plugins/README \
	mapedit/tools/smooth/plugins/README.Stream \
	mapedit/tools/smooth/plugins/plugin_randomize.c \
	mapedit/tools/smooth/plugins/plugin_smooth.c \
	mapedit/tools/smooth/plugins/plugin_stream.c \
	mapedit/tools/smooth/rough.bmp \
	mapedit/tools/smooth/smooth.c \
	mapedit/tools/smooth/smooth.h \
	mapedit/tools/smooth/smooth.sln \
	mapedit/tools/smooth/smooth.vcproj \
	mapedit/tools/smooth/smoothed.bmp \
	mapedit/tools/smooth/config.c \
	mapedit/tools/smooth/image.c \
	mapedit/tools/smooth/linked.c \
	mapedit/tools/smooth/param.c \
	mapedit/tools/smooth/plugin.c \
	server/servewin32.cc \
	server/servewin32.h

win32/exultico.o: $(srcdir)/win32/exultico.rc $(srcdir)/win32/exult.ico
	$(WINDRES) $(srcdir)/win32/exultico.rc win32/exultico.o

CLEANFILES = *~

if MACOSX
include $(srcdir)/macosx/macosx.am
else
install-exec-local:

clean-local:

endif
